feat: Add Auth and Counter features with core services
This commit expands the application by introducing a complete Authentication module, a Counter feature, and essential core services for theming and storage.

Key changes include:
- **Authentication Feature**:
    - Implements Clean Architecture layers: Domain (UseCases, Entities), Data (Repositories, Mock Remote Source, Local Storage), and Presentation (BLoC, UI).
    - Adds `AuthBloc` for managing login, registration, and session states.
    - Includes `LoginPage` with form validation and cached user session support.
- **Counter Feature**:
    - Adds a `Counter` module demonstrating BLoC usage and integration with the Auth state to display user details.
- **Core Services**:
    - **Theme Management**: Introduces `ThemeService` and `ThemeToggle` widget for switching between Light, Dark, and System modes.
    - **Storage & Analytics**: Adds `StorageService` (SharedPreferences wrapper) and a stub `AnalyticsService`.
    - **UI Components**: Adds `LanguageToggle` for runtime localization switching.
- **Home Screen**:
    - Redesigns `HomePage` as a dashboard with navigation cards to Auth, Counter, and Example modules.
    - Displays current authentication status directly on the home view.
- **Configuration**:
    - Updates `injection_container` to register new repositories, datasources, blocs, and services.
    - Expands `go_router` configuration with new routes (`/auth`, `/counter`).
    - Updates localization files (en/ru) with strings for the new modules.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,7 +3,48 @@
   "home": {
     "title": "Home",
     "welcome": "Welcome to Flutter Template",
-    "description": "This is a template project with Clean Architecture"
+    "description": "This is a template project with Clean Architecture",
+    "auth_module": "Authentication",
+    "auth_module_desc": "Login and registration module with mock data",
+    "auth_module_tooltip": "Tap to go to authentication module",
+    "counter_module": "Counter",
+    "counter_module_desc": "Simple counter with + and - operations",
+    "counter_module_tooltip": "Tap to go to counter module (requires authorization)",
+    "example_module": "Example Module",
+    "example_module_desc": "Example module with data from API",
+    "example_module_tooltip": "Tap to go to example module",
+    "auth_status": "Authorization Status",
+    "logged_in": "Logged in",
+    "not_authorized": "Not authorized"
+  },
+  "auth": {
+    "login": "Login",
+    "register": "Register",
+    "logout": "Logout",
+    "welcome": "Welcome, {name}",
+    "email": "Email",
+    "email_required": "Enter email",
+    "email_invalid": "Enter a valid email",
+    "name": "Name",
+    "name_required": "Enter name",
+    "password": "Password",
+    "password_required": "Enter password",
+    "password_min_length": "Password must contain at least 6 characters",
+    "submit": "Submit",
+    "no_account": "No account? Register",
+    "has_account": "Already have an account? Login"
+  },
+  "counter": {
+    "title": "Counter",
+    "login_required": "Please login to use the counter",
+    "user": "User:",
+    "decrement": "Decrement",
+    "decrement_tooltip": "Tap to decrease value by 1",
+    "reset": "Reset",
+    "reset_tooltip": "Tap to reset value to 0",
+    "increment": "Increment",
+    "increment_tooltip": "Tap to increase value by 1",
+    "description": "This is an example of a simple counter. Use the buttons to change the value."
   },
   "example": {
     "title": "Example",
@@ -18,6 +59,16 @@
     "retry": "Retry",
     "cancel": "Cancel",
     "ok": "OK"
+  },
+  "language": {
+    "select": "Select Language",
+    "english": "English",
+    "russian": "Russian",
+    "change": "Change language"
+  },
+  "theme": {
+    "toggle": "Toggle theme"
   }
 }
+
 
